--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "lottie-web": "^5.9.6",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-lottie": "^1.2.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.20.0",
