--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
       "styles/*": ["./styles/*"],
       "components/*": ["./components/*"],
       "constants/*": ["./constants/*"]
-    }
+    },
+    "jsxImportSource": "@emotion/react"
   },
   "exclude": ["node_modules"]
 }
